@@ -2,8 +2,22 @@
 <!DOCTYPE article PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
              "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd"
 [
+  <!ENTITY legal SYSTEM "legal.xml">
+  <!ENTITY appversion "2.0">
+  <!ENTITY manrevision "2.0">
+  <!ENTITY date "March 2002">
+  <!ENTITY app "<application>Glines</application>">
+  <!ENTITY appname "Glines">
   <!ENTITY version "2.0">
 ]>
+<!-- 
+      (Do not remove this comment block.)
+  Maintained by the GNOME Documentation Project
+  http://developer.gnome.org/projects/gdp
+  Template version: 2.0 beta
+  Template last modified Feb 12, 2002
+-->
+
 <!-- This doc is based on the GDP template from GNOME 1.2
      Its syntax and DTD has been updated to validate with xmllint.
      The content needs to be updated (it basically needs to be finished)
@@ -11,10 +25,11 @@
    -->
 <!-- =============Document Header ============================= -->
 
-<article id="index"> 
-
+<article id="index" lang="en"> 
+<!-- please do not change the id; for translations, change lang to -->
+<!-- appropriate code -->
  <articleinfo>
-  <title>Glines</title>
+  <title>&app; Manual V&manrevision;</title>
   <copyright>
    <year>2000-2002</year>
    <holder>Emese Kovács</holder>
@@ -28,36 +43,74 @@
   </copyright>
 
    -->
+<!-- An address can be added to the publisher information.  If a role is 
+     not specified, the publisher/author is the same for all versions of the 
+     document.  -->
+    <publisher> 
+      <publishername> GNOME Documentation Project </publishername> 
+    </publisher> 
 
-  <!-- do not put authorname in the header except in copyright - use
-  section "authors" below -->
+   &legal;
+   <!-- This file  contains link to license for the documentation (GNU FDL), and 
+        other legal stuff such as "NO WARRANTY" statement. Please do not change 
+	any of this. -->
 
-  <legalnotice>
-   <para>
-    Permission is granted to copy, distribute and/or modify this
-    document under the terms of the <citetitle>GNU Free Documentation
-    License</citetitle>, Version 1.1 or any later version published
-    by the Free Software Foundation with no Invariant Sections, no
-    Front-Cover Texts, and no Back-Cover Texts. You may obtain a copy
-    of the <citetitle>GNU Free Documentation License</citetitle> from
-    the Free Software Foundation by visiting 
-    <ulink url="http://www.fsf.org" type="http">their Web site</ulink> 
-    or by writing to
-    <address>
-     Free Software Foundation, Inc.
-     <street>59 Temple Place</street> - Suite 330
-     <city>Boston</city>, <state>MA</state> <postcode>02111-1307</postcode>
-     <country>USA</country>
-    </address>
-   </para>
-  </legalnotice>
+    <authorgroup> 
+      <author> 
+	<firstname>Emese</firstname> 
+	<surname>Kovács</surname> 
+	<affiliation> 
+	  <orgname>GNOME Documentation Project</orgname> 
+	  <address> <email>emese@gnome.hu</email> </address> 
+	</affiliation> 
+      </author> 
+<!-- This is appropriate place for other contributors: translators,
+      maintainers,  etc. Commented out by default.
+       <othercredit role="translator">
+	<firstname>Latin</firstname> 
+	<surname>Translator 1</surname> 
+	<affiliation> 
+	  <orgname>Latin Translation Team</orgname> 
+	  <address> <email>translator@gnome.org</email> </address> 
+	</affiliation>
+	<contrib>Latin translation</contrib>
+      </othercredit>
+-->
+    </authorgroup>
+    
+    <revhistory>
+      <revision> 
+	<revnumber>&appname; Manual V&manrevision;</revnumber> 
+	<date>&date;</date> 
+	<revdescription> 
+	  <para role="author">Emese Kovács
+	    <email>emese@gnome.hu</email>
+	  </para>
+	  <para role="publisher">GNOME Documentation Project</para>
+	</revdescription> 
+      </revision> 
+    </revhistory> 
 
-  <!-- this is version of manual, not application --> 
-  <releaseinfo>
-  This is version &version; of the Glines manual.
-  </releaseinfo>
+    <releaseinfo>This manual describes version &appversion; of &appname;.
+    </releaseinfo>
+    <!-- The following feedback information only applies to appliactions
+    listed in bugzilla.gnome.org and bugzilla.ximian.com. For other
+    applications, please provide your own feedback info or remove thsi
+    section altogether -->
+    <legalnotice> 
+      <title>Feedback</title> 
+      <para>To report a bug or make a suggestion regarding the &app; application or
+	this manual, follow the directions in the 
+	<ulink url="ghelp:gnome-feedback"
+	  type="help">GNOME Feedback Page</ulink>. 
+      </para>
+<!-- Translators may also add here feedback address for translations -->
+    </legalnotice> 
+</articleinfo>
 
- </articleinfo>
+  <indexterm zone="index"> 
+    <primary>Glines</primary> 
+  </indexterm> 
 
  <!-- ============= Document Body ============================= -->
 
