@@ -1,3 +1,9 @@
+2002-02-17  Chris Lyttle  <chris@wilddev.net>
+
+	* help/C/glines.xml: updated for new template.
+	* help/C/Makefile.am:  added legal.xml
+	* help/C/legal.xml:  added to comply with new template
+
 2002-02-17  jacob berkman  <jacob@ximian.com>
 
 	* Makefile.am (SUBDIRS): add help
